1-yamls/redis/templates/networkpolicy.yaml
---
# Source: redis/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: exercise1-redis
  namespace: "default"
  labels:
    app.kubernetes.io/instance: exercise1
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: redis
    app.kubernetes.io/version: 7.4.2
    helm.sh/chart: redis-20.13.0
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: exercise1
      app.kubernetes.io/name: redis
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    # Allow inbound connections
    - ports:
        - port: 6379
        - port: 26379
